Bug 46332 - Calc Crash FILEOPEN
Summary: Calc Crash FILEOPEN
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.6.0 target:3.5.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-20 03:23 UTC by Michael Velten
Modified: 2012-02-21 02:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Calc crashing while inside a Diagram (32.50 KB, application/vnd.ms-excel)
2012-02-20 03:23 UTC, Michael Velten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Velten 2012-02-20 03:23:28 UTC
Created attachment 57306 [details]
Calc crashing while inside a Diagram

Calc is crashing while open this document - this happens on all Libre Versions (no problem with Office 97-2010 or Softmaker)
Comment 1 s-joyemusequna 2012-02-20 07:04:31 UTC
Confirmed (LibO 3.3.4, LibO 3.4.5, LibO 3.5.0 / Windows XP, Vista 64).

Calc crashes in all cases while loading the file.
Comment 2 Not Assigned 2012-02-20 18:14:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e4f14d089d81459ac2bf3c40e75e6cfd348b58c5

don't add empty categories, fdo#46332
Comment 3 Markus Mohrhard 2012-02-20 18:16:38 UTC
This simple patch fixes the problem. The problem was that there were some empty categories but we later assumed that all categories are non empty.
Comment 4 Not Assigned 2012-02-21 02:40:15 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=065cdf07791b2de4c6ab580084d21d2b5020ca98&g=libreoffice-3-5

don't add empty categories, fdo#46332


It will be available in LibreOffice 3.5.1.