don't add empty categories, fdo#46332